# lighthouse

./: .gitignore  FORRT_Lighthouse_Data.xlsx  LICENSE  README.html  README.md  app.js  app.py  import_xlsx.py  index.html  lighthouse_poc.Rmd  lighthouse_poc.html  lighthouse_poc.md  main.py  proofofconcept.html  proofofconcept.qmd  pyproject.toml  render.yaml  start.sh  style.css
content/: about.md
data/: data.json
static/css/: about.css  style.css
static/js/: app.js
templates/: about.html  index.html
