[project]
name = "forrt-lighthouse"
version = "0.1.0"
description = "FORRT Lighthouse — interactive network explorer for replication evidence"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
]

[project.scripts]
lighthouse = "app:app"

[tool.uv]
dev-dependencies = []
