[project]
name = "forrt-lighthouse"
version = "0.1.0"
description = "FORRT Lighthouse — interactive network explorer for replication evidence"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "gunicorn>=22.0",
    "markdown>=3.6",
    "openpyxl>=3.1",
    "pandas>=2.0",
]

[project.scripts]
lighthouse = "app:create_app"
import-data = "import_xlsx:main"

[tool.uv]
